[package]
name = "future-utils"
version = "0.12.0"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Extensions to Rust's Future and Stream traits"
repository = "https://github.com/canndrew/future-utils"
license = "GPL-2.0"
keywords = ["futures", "async", "tokio"]
categories = ["asynchronous", "network-programming"]

[dependencies]
futures = "~0.1.15"
void = "1"
unwrap = "1.1"
log = "~0.3.8"
tokio = "0.1.7"
bytes = "0.4"

